<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">kahuripan_info_x</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_apakah_anda_per">Apakah anda pernah ke tempat tersebut?</string>
  <string name="lbl_kota_dahanapura">Kota Dahanapura</string>
  <string name="msg_tempat_wisata_k">Tempat Wisata Kahuripan Terdekat</string>
  <string name="lbl_logout">Logout</string>
  <string name="lbl_masukan_email">Masukan Email</string>
  <string name="msg_katakan_sesuatu">Katakan Sesuatu yang Terbaik</string>
  <string name="msg_kuripan_prototy">KURIPAN Prototype</string>
  <string name="msg_bahasa_indonesi">Bahasa Indonesia</string>
  <string name="lbl2">.....</string>
  <string name="lbl_1_menit">1 MENIT</string>
  <string name="lbl3">россия</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_masuk">Masuk</string>
  <string name="lbl_1_jam">1 JAM</string>
  <string name="lbl_panjalu">Panjalu</string>
  <string name="lbl_airlangga2">Airlangga</string>
  <string name="msg_kh_xperience">KH Xperience · 7mo ago (edited)</string>
  <string name="lbl_700">700</string>
  <string name="lbl_more_info">More Info</string>
  <string name="lbl_top_comment">Top Comment : </string>
  <string name="lbl_10_replies">10 replies</string>
  <string name="lbl_balasan">BALASAN</string>
  <string name="lbl_kahuripan">Kahuripan</string>
  <string name="msg_punya_aplikasi">Punya aplikasi · 7mo ago (edited)</string>
  <string name="msg_apakah_yakin_un">Apakah yakin untuk keluar?</string>
  <string name="lbl_bahasa">Bahasa</string>
  <string name="lbl_bali">Bali</string>
  <string name="lbl_komentar2">KOMENTAR</string>
  <string name="msg_apakah_sudah_ya">Apakah sudah yakin?</string>
  <string name="lbl_darkmode">Darkmode</string>
  <string name="msg_masukan_passwor">Masukan Password</string>
  <string name="lbl_sejarah">Sejarah</string>
  <string name="msg_airlangga_meru">Airlangga, merupakan pendiri kota Daha sebagai pindahan kota Kahuripan. Ketika ia turun takhta tahun 1042, wilayah...</string>
  <string name="lbl_username">Username</string>
  <string name="lbl_edit_profile">Edit Profile</string>
  <string name="msg_medang_kahuripa">Medang-Kahuripan</string>
  <string name="lbl_d">d</string>
  <string name="lbl_user25">User25</string>
  <string name="lbl_pengguna_baru">Pengguna Baru</string>
  <string name="lbl_1_0_km">1.0 km</string>
  <string name="lbl_lihat">Lihat</string>
  <string name="lbl_desa_wotanmas">Desa Wotanmas</string>
  <string name="lbl_candi_watutulis">Candi Watutulis</string>
  <string name="lbl_kirim">Kirim</string>
  <string name="lbl_di"> di </string>
  <string name="lbl_notifikasi">Notifikasi</string>
  <string name="msg_pendatang_baru">Pendatang Baru· 7mo ago (edited)</string>
  <string name="lbl_komentar">Komentar</string>
  <string name="msg_1049_atau_se">, 1049) atau sering ditulis Erlangga adalah pendiri kerajaan </string>
  <string name="lbl_informasi">Informasi</string>
  <string name="msg_membalas_chat_a">Membalas Chat Anda</string>
  <string name="lbl_lupa_passwor">Lupa Passwor</string>
  <string name="lbl_top_categories">Top Categories</string>
  <string name="lbl_1_0km2">1.0km</string>
  <string name="msg_ada_infomasi_ba">Ada Infomasi Baru Nih</string>
  <string name="lbl_1k">1K</string>
  <string name="lbl_airlangga">Airlangga (</string>
  <string name="msg_feedback">Feedback                         :</string>
  <string name="lbl_setuju_banget">Setuju Banget</string>
  <string name="msg_penamaan_kahuri">Penamaan kahuripan</string>
  <string name="msg_darkmode_aplika">Darkmode Aplikasi</string>
  <string name="msg_selamat_datang2">Selamat datang di prototype KURINFO</string>
  <string name="msg_jelajahi_sejara">Jelajahi Sejarah</string>
  <string name="lbl_user">User</string>
  <string name="msg_belum_punya_aku">Belum punya akun ?</string>
  <string name="lbl_raja_airlangga">Raja Airlangga</string>
  <string name="lbl_password">Password</string>
  <string name="msg_masukan_email_a">Masukan email Anda dan tunggu kode etik akan dikirimkan.</string>
  <string name="lbl_re_password">Re-Password</string>
  <string name="msg_aplikasi_yang_b">Aplikasi yang bagus</string>
  <string name="lbl_pengaturan">Pengaturan</string>
  <string name="lbl_karya_sastra">Karya sastra</string>
  <string name="lbl_candi">Candi</string>
  <string name="lbl_arahkan_ke_peta">Arahkan Ke Peta</string>
  <string name="lbl_janggala">Janggala</string>
  <string name="lbl_500_m">500 m</string>
  <string name="lbl_terimakasih">Terimakasih</string>
  <string name="lbl_lupa_password">Lupa password ?</string>
  <string name="msg_artikel_masih_d">Artikel masih dipahami</string>
  <string name="lbl_lupa_password2">Lupa Password</string>
  <string name="msg_current_locatio">Current location</string>
  <string name="msg_candi_gunung_ga">Candi Gunung Gangsir</string>
  <string name="lbl_500">500</string>
  <string name="msg_desa_wotanmas_j">Desa Wotanmas Jedong terletak di Kecamatan Ngoro, Kabupaten Mojokerto. Dari Kota Mojokerto sekitar 30 kilometer ke arah timur...</string>
  <string name="lbl_jawa_timur">Jawa Timur</string>
  <string name="lbl_feedback">Feedback</string>
  <string name="lbl_4_8">4.8</string>
  <string name="msg_merupakan_pen">, merupakan pendiri kota Daha sebagai pindahan kota </string>
  <string name="lbl_see_all">See all</string>
  <string name="msg_rekomendasi_wis">Rekomendasi Wisata Kahuripan</string>
  <string name="lbl_10">10</string>
  <string name="lbl_pesan">Pesan</string>
  <string name="msg_balaslah_sesuat">Balaslah Sesuatu yang Terbaik</string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl_belahan">Belahan</string>
  <string name="lbl">, </string>
  <string name="lbl_4_8_reviews">4.8 reviews</string>
  <string name="msg_pada_prortype_k">Pada Prortype KH Xperience dengan berbagai tujuan kami membuat aplikasi.</string>
  <string name="msg_airlangga_bali3">Airlangga (Bali, 1000 - Belahan, 1049) atau 
sering ditulis Erlangga adalah pendiri kerajaan Medang-Kahuripan, Janggaladan Panjalu di Jawa Timur yang memerintah pada sekitar tahun 1019-1043 M. Airlangga naik takhta dengan gelar abhiseka (wisuda) Sri Maharaja Rakai Halu Sri Lokeswara Dharmawangsa Airlangga Anantawikramottunggadewa. 

Ia memerintahkan Mpu Kanwa untuk menggubah Kakawihan Arjuwinaha yang menggambarkan keberhasilannya dalam medan peperangan, di akhir masa pemerintahannya Airlangga membagi kerajaannya menjadi dua untuk kedua putranya yaitu Kerajaan Panjalu dan Kerjaan Janggala.

Hingga saat ini nama raja Airlangga masih dikenang di dalam ingatan masyarakat Jawa dan di berbagai cerita rakyat, juga sering diabadikan di berbagai tempat di Indonesia. Airlangga bermakna "air yang melompat", dikisahkan Airlangga berhasil lolos dari bencana Mahapralaya ("bencana besar") yang dianggap bagai air bah, sehingga Airlangga juga adalah julukan bermakna sebagai air yang melompat.*</string>
  <string name="msg_airlangga_bali2">Airlangga (Bali, 1000 - Belahan, 1049) atau sering ditulis Erlangga adalah pendiri kerajaan Medang-Kahuripan, </string>
  <string name="msg_masukan_kembali">Masukan kembali Password</string>
  <string name="msg_khxperience_gma">khxperience@gmail.com</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_artikel">Artikel</string>
  <string name="lbl_search">Search</string>
  <string name="msg_terimakasih_and">Terimakasih anda sudah berpatisipasi</string>
  <string name="msg_airlangga_bali">Airlangga (Bali, 1000 - Belahan, 1049) atau sering ditulis Erlangga adalah pendiri kerajaan Medang-Kahuripan, Janggala dan Panjalu di Jawa Timur.....</string>
  <string name="lbl_email_i_d">Email I\u2019d</string>
  <string name="lbl_200_replies">200 replies</string>
  <string name="lbl_change_picture">Change Picture</string>
  <string name="lbl_200">200</string>
  <string name="msg_ketika_ia_tur">. Ketika ia turun takhta tahun 1042, wilayah...</string>
  <string name="lbl_guest_mode">Guest Mode</string>
  <string name="lbl_ya">Ya</string>
  <string name="lbl_tidak">Tidak</string>
  <string name="lbl_login">Login</string>
  <string name="lbl_batal">Batal</string>
  <string name="msg_kerajaan_kahuri2">Kerajaan Kahuripan atau dikenal dengan nama Medang Kahuripan, adalah nama yang lazim dipakai untuk sebuah...</string>
  <string name="msg_kerajaan_kahuri">Kerajaan Kahuripan</string>
  <string name="msg_sudah_memiliki">Sudah memiliki akun ?</string>
  <string name="msg_jarak_dari_temp">Jarak dari tempat anda : 1.0 km</string>
  <string name="lbl_situs">Situs</string>
  <string name="lbl_ok">OK</string>
  <string name="msg_artikel_yang_ba">Artikel yang bagus</string>
  <string name="lbl_daftar">Daftar</string>
  <string name="lbl_update">Update</string>
  <string name="lbl_dan"> dan </string>
  <string name="msg_selamat_datang">Selamat Datang di Prototype KURINFO</string>
  <string name="lbl_1000">, 1000 - </string>
  <string name="lbl_dark_mode2">Dark Mode</string>
  <string name="lbl_lokasi_wisata">Lokasi Wisata</string>
  <string name="lbl_arkeologi">Arkeologi</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
</resources>
