<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="oneVM" type="com.kahuripaninfox.app.modules.one.data.viewmodel.OneVM"/>
    </data>
    <FrameLayout android:id="@+id/frameOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">

        <LinearLayout
            android:id="@+id/linearColumnlogin"
            android:layout_width="match_parent"
            android:layout_height="516dp"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="@dimen/_62pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_62pxh"
            android:layout_marginBottom="@dimen/_20pxv"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLogin"
                style="@style/txtPoppinssemibold38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_37pxh"
                android:layout_marginEnd="@dimen/_37pxh"
                android:ellipsize="end"
                android:letterSpacing="0.15"
                android:singleLine="true"
                android:text="@{oneVM.oneModel.txtLogin}"
                tools:text="@string/lbl_login" />

            <LinearLayout
                android:id="@+id/linearColumnmasukanemail"
                style="@style/groupStylecornerRadius_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_38pxv"
                android:layout_marginEnd="@dimen/_3pxh"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtMasukanEmail"
                    style="@style/txtPoppinsregular14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{oneVM.oneModel.txtMasukanEmail}"
                    tools:text="@string/lbl_masukan_email" />

                <FrameLayout
                    android:id="@+id/frameStackemail"
                    style="@style/groupStylewhite_A700cornerRadius"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_43pxv"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/_4pxv">

                    <TextView
                        android:id="@+id/txtEmail"
                        style="@style/txtPoppinsregular12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/_13pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_marginEnd="@dimen/_13pxh"
                        android:layout_marginBottom="@dimen/_12pxv"
                        android:ellipsize="end"
                        android:letterSpacing="0.03"
                        android:singleLine="true"
                        android:text="@{oneVM.oneModel.txtEmail}"
                        tools:text="@string/lbl_email" />

                    <TextView
                        android:id="@+id/txtEmailOne"
                        style="@style/txtPoppinsregular12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/_13pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_marginEnd="@dimen/_13pxh"
                        android:layout_marginBottom="@dimen/_12pxv"
                        android:ellipsize="end"
                        android:letterSpacing="0.03"
                        android:singleLine="true"
                        android:text="@{oneVM.oneModel.txtEmailOne}"
                        tools:text="@string/lbl_email" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearColumnmasukanpasswor"
                style="@style/groupStylecornerRadius_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_4pxh"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtMasukanPasswor"
                    style="@style/txtPoppinsregular14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{oneVM.oneModel.txtMasukanPasswor}"
                    tools:text="@string/msg_masukan_passwor" />

                <TextView
                    android:id="@+id/txtGroupThirty"
                    style="@style/txtSolidRoundedOutline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:ellipsize="end"
                    android:letterSpacing="0.03"
                    android:paddingStart="@dimen/_5pxh"
                    android:paddingTop="@dimen/_12pxv"
                    android:paddingBottom="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@{oneVM.oneModel.txtGroupThirty}"
                    tools:text="@string/lbl_password" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRowbelumpunyaaku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_46pxv"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtBelumpunyaaku"
                    style="@style/txtRobotoromanregular13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.54"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{oneVM.oneModel.txtBelumpunyaaku}"
                    tools:text="@string/msg_belum_punya_aku" />

                <TextView
                    android:id="@+id/txtLupapassword"
                    style="@style/txtRobotoromanregular13_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_64pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.46"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{oneVM.oneModel.txtLupapassword}"
                    tools:text="@string/lbl_lupa_password" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtDaftar"
                style="@style/txtRobotoromanregular13_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:letterSpacing="0.03"
                android:singleLine="true"
                android:text="@{oneVM.oneModel.txtDaftar}"
                tools:text="@string/lbl_daftar" />

            <TextView
                android:id="@+id/txtGuestMode"
                style="@style/txtRobotoromanregular13_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_37pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_marginEnd="@dimen/_37pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{oneVM.oneModel.txtGuestMode}"
                tools:text="@string/lbl_guest_mode" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMasuk"
                style="@style/btnSolidRounded_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_37pxh"
                android:layout_marginTop="@dimen/_54pxv"
                android:layout_marginEnd="@dimen/_27pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_9pxv"
                android:singleLine="true"
                android:text="@string/lbl_masuk"
                android:textAllCaps="false"
                tools:text="@string/lbl_masuk" />
        </LinearLayout>
    </FrameLayout>
</layout>
