<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="nineVM" type="com.kahuripaninfox.app.modules.nine.data.viewmodel.NineVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearNine"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackunsplashjmurdh"
            android:layout_height="@dimen/_259pxv" android:layout_width="match_parent">
            <FrameLayout android:id="@+id/frameStackvector"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_188pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_width="match_parent" style="@style/groupStylegray_901">
                <ImageView android:id="@+id/imageVector"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginBottom="@dimen/_25pxv"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_25pxv"
                    android:layout_width="@dimen/_7pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector_white_a700"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector_white_a700"/>
            </FrameLayout>
            <ImageView android:id="@+id/imageUnsplashjmURdh"
                android:layout_gravity="bottom|end"
                android:layout_height="@dimen/_142pxh"
                android:layout_marginEnd="@dimen/_125pxh"
                android:layout_marginStart="@dimen/_125pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="@dimen/_142pxh"
                android:scaleType="centerCrop" circular="@{true}"
                imageRes="@{@drawable/img_unsplashjmurdh}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_unsplashjmurdh"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtChangePicture"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_150pxh"
            android:layout_marginStart="@dimen/_150pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{nineVM.nineModel.txtChangePicture}"
            style="@style/txtPoppinsregular12_1" tools:text="@string/lbl_change_picture"/>
        <TextView android:ellipsize="end" android:id="@+id/txtUsername"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_47pxh"
            android:layout_marginStart="@dimen/_47pxh"
            android:layout_marginTop="@dimen/_46pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{nineVM.nineModel.txtUsername}"
            style="@style/txtPoppinsmedium14" tools:text="@string/lbl_username"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_501_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_user"
            android:id="@+id/etGroupTwentySix" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_46pxh"
            android:layout_marginStart="@dimen/_47pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@={nineVM.nineModel.etGroupTwentySixValue}"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtEmailId"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_47pxh"
            android:layout_marginStart="@dimen/_47pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{nineVM.nineModel.txtEmailId}"
            style="@style/txtPoppinsmedium14" tools:text="@string/lbl_email_i_d"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_501_radius_8"
            android:ellipsize="end"
            android:hint="@string/msg_khxperience_gma"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_46pxh"
            android:layout_marginStart="@dimen/_47pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_10pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@={nineVM.nineModel.etEmailValue}"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPassword"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_47pxh"
            android:layout_marginStart="@dimen/_47pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{nineVM.nineModel.txtPassword}"
            style="@style/txtPoppinsmedium14" tools:text="@string/lbl_password"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_501_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_user25"
            android:id="@+id/etGroupTwentyFour" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_46pxh"
            android:layout_marginStart="@dimen/_47pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@={nineVM.nineModel.etGroupTwentyFourValue}"
            android:textColorHint="@color/black_900"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnUpdate"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_47pxh"
            android:layout_marginStart="@dimen/_47pxh"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_8pxv" android:singleLine="true"
            android:text="@string/lbl_update"
            android:textAllCaps="false" style="@style/btnSolidRounded_4" tools:text="@string/lbl_update"/>
    </LinearLayout>
</layout>
