<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="twoVM" type="com.kahuripaninfox.app.modules.two.data.viewmodel.TwoVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearTwo" android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtLupaPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_247pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.13" android:singleLine="true"
            android:text="@{twoVM.twoModel.txtLupaPassword}"
            style="@style/txtPoppinssemibold32" tools:text="@string/lbl_lupa_password2"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnpesan"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_52pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_2">
            <TextView android:ellipsize="end" android:id="@+id/txtPesan"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{twoVM.twoModel.txtPesan}"
                style="@style/txtPoppinssemibold14" tools:text="@string/lbl_pesan"/>
            <TextView android:id="@+id/txtMasukanemailA"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="match_parent"
                android:text="@{twoVM.twoModel.txtMasukanemailA}"
                style="@style/txtPoppinsregular13" tools:text="@string/msg_masukan_email_a"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtMasukanEmail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_47pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{twoVM.twoModel.txtMasukanEmail}"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_masukan_email"/>
            <FrameLayout android:id="@+id/frameStackemail"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_43pxv"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="@dimen/_279pxh" style="@style/groupStylewhite_A700cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.03"
                    android:singleLine="true"
                    android:text="@{twoVM.twoModel.txtEmail}"
                    style="@style/txtPoppinsregular12" tools:text="@string/lbl_email"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmailOne"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.03"
                    android:singleLine="true"
                    android:text="@{twoVM.twoModel.txtEmailOne}"
                    style="@style/txtPoppinsregular12" tools:text="@string/lbl_email"/>
            </FrameLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnKirim"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_55pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_132pxv"
            android:layout_width="@dimen/_218pxh"
            android:letterSpacing="0.1"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@string/lbl_kirim" android:textAllCaps="false"
            style="@style/btnSolidRounded_3" tools:text="@string/lbl_kirim"/>
    </LinearLayout>
</layout>
